# Pixella

./: .gitignore  README.md  main.py  pixella.spec  pyproject.toml  requirements.txt
pixella/: __init__.py
pixella/core/: __init__.py  album_manager.py  config.py  thumbnails.py  workers.py
pixella/db/: __init__.py  models.py  repository.py
pixella/ui/: __init__.py  breadcrumb.py  detail_panel.py  dialogs.py  fluent_icons.py  grid_view.py  group_window.py  ime_fix.py  main_window.py  rating_bar.py  search_bar.py  sort_bar.py  star_rating.py  tag_input.py  tag_manager.py  themes.py
resources/: icon.psd
